--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="chart-container">
                     <canvas id="suhuChart"></canvas>
                 </div>
-                <p id="suhuValue" class="text-center font-bold text-blue-600 text-xl mt-2">--%</p>
+                <p id="suhuValue" class="text-center font-bold text-blue-600 text-xl mt-2">--°</p>
             </div>
 
             <!-- Kelembaban Circular Progress -->
