feat kelembaban tanah

--- a/index.html
+++ b/index.html
@@ -32,12 +32,19 @@
 
             <!-- Kelembaban Circular Progress -->
             <div>
-                <h3 class="text-lg font-semibold text-gray-700 text-center mb-2">Kelembaban</h3>
+                <h3 class="text-lg font-semibold text-gray-700 text-center mb-2">Kelembaban Udara</h3>
                 <div class="chart-container">
                     <canvas id="kelembabanChart"></canvas>
                 </div>
                 <p id="kelembabanValue" class="text-center font-bold text-green-600 text-xl mt-2">--%</p>
             </div>
+        </div>
+        <div>
+            <h3 class="text-lg font-semibold text-gray-700 text-center mb-2">Kelembaban Tanah</h3>
+            <div class="chart-container">
+                <canvas id="kelembabanTanahChart"></canvas>
+            </div>
+            <p id="kelembabanTanahValue" class="text-center font-bold text-green-600 text-xl mt-2">--%</p>
         </div>
     </div>
 
