--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="bg-gray-100 flex justify-center items-center h-screen">
     <div class="card max-w-lg w-full bg-white shadow-lg rounded-lg p-6">
-        <h2 class="text-3xl font-semibold text-center text-gray-800 mb-6">Monitoring Sensor</h2>~
+        <h2 class="text-3xl font-semibold text-center text-gray-800 mb-6">Monitoring Sensor</h2>
         <div>
             <h3 class="text-lg font-semibold text-gray-700 text-center mb-2">Kelembaban Tanah</h3>
             <div class="chart-container">
